# trading-lab

./: .cursorignore  .gitignore  pyproject.toml  pyrightconfig.json
config/: margin_rate.py
datamodule/: __init__.py  datamodule.py  dataset.py
evaluation/: backtestor.py  plotter.py
model/: model.py
model/callback/: backtester.py
model/common/: loss.py
model/dlinear/: __init__.py  model.py
preprocess/: preprocessor.py
src/archived/EXP0001_band_predictor/: run_preprocess.py  train.py
src/archived/EXP0002_extrema_detector/: train.py
src/archived/EXP0003_sharpe_extrema_detector/: run_preprocess.py
src/archived/EXP0006_remaining_peak_trough_predictor/: train.py
src/archived/EXP0007_STReL/: train_downstream.py  train_upstream.py
src/archived/EXP0009_pivot_landing/: multirun.sh
src/archived/EXP0010_repr_extrema_detector_revis/: multirun.sh
src/datamodule/: __init__.py  dataset.py
src/misc/: unit.py
src/model/: __init__.py
src/model/bandpredictor/: __init__.py  datamodule.py  dataset.py
src/model/callback/: __init__.py  backtester.py
src/model/common/: loss.py
src/model/dlinear/: __init__.py  backtester_callback.py  const.py  model.py  network.py
src/model/extrema_detector/: __init__.py  backtester_callback.py  datamodule.py  dataset.py  model.py
src/model/repr_extrema_detector/: const.py  (+3 more)
src/preprocess/: after_merge_preprocessing_module.py  preprocessor.py  raw_preprocessing_module.py  resample_preprocessing_module.py
src/task/: __init__.py  train.py
src/util/: const.py  registry.py
task/: run_preprocess.py  train.py
(+366 files in other folders)
