[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-lab-jh"
version = "0.1.0"
description = "Explore and experiment trading ideas"
authors = [
    { name = "Jihyeong Yoo", email = "jh@sgl.ai" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
